--- a/data_from_file/Dockerfile
+++ b/data_from_file/Dockerfile
@@ -2,3 +2,4 @@ FROM python:3.8.2
 COPY /file_helper.py /file_helper.py
 COPY /requirements.txt /requirements.txt
 RUN pip install --upgrade pip && pip install -r requirements.txt
+CMD ["python", "file_helper.py"]
